Fix slick carousel wrong width calculation inside flexbox

--- a/src/ImageCards/css/carousel.less
+++ b/src/ImageCards/css/carousel.less
@@ -24,8 +24,10 @@
   .slider-wrapper {
     position: relative;
     overflow: hidden;
-    width: 100%;
-    max-width: 100%;
+    width: 0;
+    min-width: 100%;
+    // max-width: 100%;
+    // width: 100%;
     height: @sliderWrapperHeight;
 
     @media (max-width: 600px) {
